[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/scripts/Door.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/Door.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/doorOpen_2.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/doorClose_1.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.25, 17 )

[node name="Door" type="Area2D" groups=["doors"]]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
requires_key = true
locked = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.25, 0 )
shape = SubResource( 2 )

[node name="Door" type="Sprite" parent="."]
position = Vector2( 5, 0 )
texture = ExtResource( 2 )
hframes = 2
vframes = 2
frame = 1

[node name="OpenSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -27.093

[node name="LockedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -23.487

[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
